Make tests self-contained

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -116,9 +116,13 @@ VerifyDiffs.class : VerifyDiffs.java
 annotated/%.java: %.java %.jaif %.class
 	CLASSPATH=${CLASSPATH}:. insert-annotations-to-source -o @checkers.javari.quals.ThisMutable $*.jaif  $*.java
 
+## Why doesn't -sourcepath version work for finding the JDK??
+
 annotated/%.typecheck.diff: annotated/%.java
 # ".." in classpath is for helper classes like Cell.
-	  set -o pipefail && cd annotated && javac -processor checkers.javari.JavariChecker  -sourcepath .:..:${CHECKERS}/jdk/javari/src -implicit:class $*.java 2>&1 | tee $*.typecheck.diff
+	set -o pipefail && cd annotated && javac -processor checkers.javari.JavariChecker  -classpath CLASSPATH=${CHECKERS}/jdk/javari/build:.:${CLASSPATH} -implicit:class $*.java 2>&1 | tee $*.typecheck.diff
+##	set -o pipefail && cd annotated && javac -processor checkers.javari.JavariChecker  -classpath CLASSPATH=${CHECKERS}/jdk/javari/build:.:${CLASSPATH} -sourcepath .:..:${CHECKERS}/jdk/javari/src -implicit:class $*.java 2>&1 | tee $*.typecheck.diff
+##	set -o pipefail && cd annotated && javac -processor checkers.javari.JavariChecker  -sourcepath .:..:${CHECKERS}/jdk/javari/src -implicit:class $*.java 2>&1 | tee $*.typecheck.diff
 
 # TODO: run Javari type-checker
 
