override PATH when running tests

--- a/build.xml
+++ b/build.xml
@@ -278,6 +278,7 @@
       <env key="CLASSPATH" path="${toString:libpath}"/>
       <env key="CHECKERS" path="${checkers}"/>
       <env key="JAVA_HOME" path="${env.JAVA_HOME}"/>
+      <env key="PATH" path="${afu}/scripts:${env.JAVA_HOME}/bin:${env.PATH}"/>
     </exec>
   </target>
 
