--- a/build.xml
+++ b/build.xml
@@ -265,7 +265,7 @@
       <env key="JAVAC" file="${annotations-compiler}/dist/bin/javac" />
       <env key="CLASSPATH" path="${toString:libpath}"/>
       <env key="CHECKERS" path="${checkers}"/>
-      <env key="JAVA_HOME" path="${JAVA_HOME}"/>
+      <env key="JAVA_HOME" path="${env.JAVA_HOME}"/>
     </exec>
   </target>
 
@@ -282,8 +282,8 @@
       <env key="JAVAC" file="${annotations-compiler}/dist/bin/javac" />
       <env key="CLASSPATH" path="${checkers}/checkers.jar"/>
       <env key="CHECKERS" path="${checkers}"/>
-      <env key="JAVA_HOME" path="${JAVA_HOME}"/>
-      <env key="PATH" path="${afu}/scripts:${JAVA_HOME}/bin:${env.PATH}"/>
+      <env key="JAVA_HOME" path="${env.JAVA_HOME}"/>
+      <env key="PATH" path="${afu}/scripts:${env.JAVA_HOME}/bin:${env.PATH}"/>
     </exec>
   </target>
 
