Add checkers.jar to classpath when invoking javac.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -37,7 +37,7 @@ toplevel-all: $(TOPLEVEL_DIFFS) $(TOPLEVEL_TYPECHECK_DIFFS)
 
 .PRECIOUS: %.class
 %.class : %.java
-	$(JAVAC) -classpath . -g -d . $^
+	$(JAVAC) -classpath .:${CHECKERS}/checkers.jar -g -d . $^
 
 # Runs Javarifier on the Jolden case studies by running a separate
 # Makefile similar to this one.
@@ -122,7 +122,7 @@ annotated/%.java: %.java %.jaif %.class
 
 %.typecheck.diff: annotated/%.java
 # ".." in classpath is for helper classes like Cell.
-	set -o pipefail && $(JAVAC) -processor checkers.javari.JavariChecker -Xbootclasspath/p:${CHECKERS}/jdk/javari/jdk.jar -classpath annotated:${CLASSPATH} -implicit:class annotated/$*.java 2>&1 | tee $*.typecheck.diff
+	set -o pipefail && $(JAVAC) -processor checkers.javari.JavariChecker -Xbootclasspath/p:${CHECKERS}/jdk/javari/jdk.jar -classpath annotated:${CLASSPATH}:${CHECKERS}/checkers.jar -implicit:class annotated/$*.java 2>&1 | tee $*.typecheck.diff
 
 
 # Remove all .diff, .log files from the tests directory,
