Require bash, not sh.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,7 +7,8 @@
 #
 # To test just one class file, use 'make myPackage.myClass.diff'.
 
-SHELL = /bin/sh
+# Not /bin/sh because dash does not support "set -o pipefail".
+SHELL = /bin/bash
 
 TOPLEVEL_DIFFS := $(patsubst %.goal, %.diff, $(wildcard *.goal))
 TOPLEVEL_TYPECHECK_DIFFS :=  $(patsubst %.annotated.goal, %.typecheck.diff, $(wildcard *.annotated.goal))
