constraint causes now printed in automatic subtyping form

--- a/tests/tinySQL/Makefile
+++ b/tests/tinySQL/Makefile
@@ -32,6 +32,7 @@ ${TESTNAME}.jaif: ../../javarifier.jar
 	${JAVARIFIER} \
 	-programCPEntries . \
 	-useWorldAsStubs \
+        -dumpCauses \
 	-output $@ \
 	-outputFormat annotationIndexFile \
 	${MAINCLASS} \
