--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/polyglotclasses-1.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/sootclasses-2.2.3.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/scene-lib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
