--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/asmx"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/scene-lib"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/>
+	<classpathentry kind="lib" path="lib/plume.jar"/>
 	<classpathentry kind="lib" path="lib/jasminclasses-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/polyglotclasses-1.3.5.jar"/>
 	<classpathentry kind="lib" path="lib/sootclasses-2.4.0.jar"/>
