--- a/build.xml
+++ b/build.xml
@@ -64,10 +64,9 @@
         <pathelement location="src"/>
       </path>
 
-      <property name="plume-lib-dir" value="${javarifier}/lib/plume-lib"/>
-
       <path id="libpath">
-        <pathelement location="${plume-lib-dir}/java/plume.jar"/>
+        <!-- Make our copy of plume.jar override any subsequent ones on the path. -->
+        <pathelement location="${javarifier}/lib/plume.jar"/>
         <pathelement location="${javari-annotated-jdk}/bin"/>
 <!--        <pathelement location="${annotations-shared}/bin"/> -->
         <pathelement location="${checkers}/build"/>
@@ -88,42 +87,9 @@
       <ant dir="${annotations-compiler}" antfile="make/build.xml"
           inheritAll="false" target="build"/>
       <ant dir="${checkers}" target="build" inheritAll="false"/>
-      <!-- <antcall target="plume-lib"/> -->
   </target>
 
-  <target name="plume-lib" depends="init-properties"
-    description="Get and build the latest plume-lib from the Mercurial repository">
-    <available file="${plume-lib-dir}" type="dir" property="exists.plume-lib-dir"/>
-    <antcall target="plume-lib-clone"/>
-    <antcall target="plume-lib-update"/>
-    <antcall target="plume-lib-build"/>
-  </target>
-
-  <target name="plume-lib-clone" unless="exists.plume-lib-dir">
-    <echo>Cloning the latest plume-lib from the Mercurial repository...</echo>
-    <exec executable="hg" failonerror="true">
-      <arg value="clone"/>
-      <arg value="https://plume-lib.googlecode.com/hg/"/>
-      <arg value="${plume-lib-dir}"/>
-    </exec>
-  </target>
-
-  <target name="plume-lib-update" if="exists.plume-lib-dir">
-    <echo>Updating plume-lib from the Mercurial repository...</echo>
-    <exec executable="hg" dir="${plume-lib-dir}" failonerror="true">
-      <arg value="pull"/>
-      <arg value="-u"/>
-    </exec>
-  </target>
-
-  <target name="plume-lib-build">
-    <echo>Building plume-lib...</echo>
-    <exec executable="make" dir="${plume-lib-dir}/java" failonerror="true">
-      <arg value="jar"/>
-    </exec>
-  </target>
-
-  <target name="init" depends="init-properties, plume-lib, build-dependencies"
+  <target name="init" depends="init-properties, build-dependencies"
     description="Initialize properties and build required projects">
   </target>
 
@@ -135,16 +101,18 @@
 
     <echo message="Copying over necessary files to ${temp-bin}"/>
 
-    <unjar src="${javarifier}/lib/jasminclasses-2.4.0.jar"
-	   dest="${temp-bin}"/>
-    <unjar src="${javarifier}/lib/polyglotclasses-1.3.5.jar"
-	   dest="${temp-bin}"/>
-    <unjar src="${javarifier}/lib/sootclasses-2.4.0.jar"
-	   dest="${temp-bin}"/>
     <unjar src="${afu}/annotation-file-utilities.jar"
-	   dest="${temp-bin}"/>
+           dest="${temp-bin}"/>
+    <!-- There is also a copy of plume in annotation-file-utilities; make
+         ours override it. -->
     <unjar src="${plume-lib-dir}/java/plume.jar"
-       dest="${temp-bin}"/>
+           dest="${temp-bin}"/>
+    <unjar src="${javarifier}/lib/jasminclasses-2.4.0.jar"
+           dest="${temp-bin}"/>
+    <unjar src="${javarifier}/lib/polyglotclasses-1.3.5.jar"
+           dest="${temp-bin}"/>
+    <unjar src="${javarifier}/lib/sootclasses-2.4.0.jar"
+           dest="${temp-bin}"/>
     <copy todir="${temp-bin}">
       <fileset dir="${javarifier}/bin" />
     </copy>
@@ -243,7 +211,7 @@
 
   <!-- Remove all generated files. -->
   <target name="clean" depends="init-properties"
-	  description="Remove all generated files.">
+          description="Remove all generated files.">
     <delete dir="bin"/>
 
     <echo message="Deleting temporary directory: ${temp-bin}"/>
